[project]
name = "crt-nodes"
description = "This set includes toggle nodes for Lora Unet blocks L1/L2 and a node to remove trailing comma from string end."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/plugcrypt/CRT-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "CRT-Nodes"
Icon = ""
